# Blog-WebCrawler

./: .replit  README.md  app.py  main.py  models.py  pdf_generator.py  pyproject.toml  routes.py  scraper.py
attached_assets/: content-1748919277159.md  content-1748924534956.md
downloads/: blog_articles_20250603_032708.txt  blog_articles_20250603_043417.txt  blog_articles_20250603_043859.txt
instance/: blog_scraper.db
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
